--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,5 @@
 // Specific CSS for your home-page
-.main sign {
+.main {
   background-color: #032830;
   padding: 20px 100px;
   display: inline-block;
