--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,6 @@
 // Specific CSS for your home-page
-.main {
-  background-color: #032830;
+.btn btn-primary {
+  background-color: #9eeaf9;
   padding: 20px 100px;
   display: inline-block;
   text-decoration :none;
