--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,11 +3,14 @@
 <h1>EnDebt</h1>
 <p>...Coming Soon!!</p>
 
-  <div class="main">
+
+
+
+  <div>
     <% if current_user%>
-      <%= link_to "Sign Out", destroy_user_session_path%>
+      <%= link_to "Sign Out", destroy_user_session_path, class:"btn btn-primary"%>
     <% else current_user%>
-      <%= link_to "Sign In", new_user_session_path%>
+      <%= link_to "Sign In", new_user_session_path, class:"btn btn-primary"%>
     <% end %>
   </div>
 </div>
