--- a/app/views/payment_options/dashboard.html.erb
+++ b/app/views/payment_options/dashboard.html.erb
@@ -1,8 +1,10 @@
-<div>
+<%# <div>
   <% @debts.each do |debt| %>
-    <%= debt.id %>
-    <% debt.payment_options.each do |po| %>
-      <%= po.id %>
-    <% end %>
-  <% end %>
-</div>
+    <%# <%= debt.id %>
+    <%# <% debt.payment_options.each do |po| %>
+      <%# <%= po.id %>
+    <%# <% end %>
+  <%# <% end %>
+<%# </div> %>
+<h1>test</h1>
+<%= @selected_option %>
