add monthly principal amount column to debts and modify debt breakdown

--- a/app/views/debts/_form.html.erb
+++ b/app/views/debts/_form.html.erb
@@ -1,6 +1,7 @@
 <%= simple_form_for [@debt] do |f| %>
     <%= f.input :name %>
     <%= f.input :interest_rate %>
+    <%= f.input :monthly_principal_amount %>
     <%= f.input :remaining_principal %>
     <%= f.input :original_principal %>
     <%= f.input :income %>
