--- a/app/views/debts/show.html.erb
+++ b/app/views/debts/show.html.erb
@@ -20,17 +20,22 @@
 
   <div class="info shadow-sm p-3 mb-1 bg-body rounded">
     <h4>Total expected amount of payment at this pace</h4>
-    <%= @payment_options[0].total_monthly_payment %>
+    <%= @payment_options[3].total_monthly_payment %>
+  </div>
+
+    <div class="info shadow-sm p-3 mb-1 bg-body rounded">
+    <h4>Monthly payment amount for principal</h4>
+    <%= @payment_options[3].monthly_payment_principal %>
   </div>
 
   <div class="info shadow-sm p-3 mb-1 bg-body rounded">
     <h4>How much you pay for interest</h4>
-    <%= @payment_options[0].total_interest_amount %>
+    <%= @payment_options[3].total_interest_amount %>
   </div>
 
   <div class="info shadow-sm p-3 mb-1 bg-body rounded">
     <h4>Expected date you finish payment</h4>
-    <%= @payment_options[0].final_payment_date %>
+    <%= @payment_options[3].final_payment_date %>
   </div>
 
 </div>
