more graphics updates

--- a/app/views/debts/show.html.erb
+++ b/app/views/debts/show.html.erb
@@ -5,7 +5,11 @@
 <%= column_chart @original_payments %>
 </div>
 
+<div class="original_interest">
 
+<%= column_chart @monthly_interests %>
+
+</div>
 
 </div>
 
@@ -48,15 +52,6 @@
 
 <div class="container mb-4">
 <h2>Graph area</h2>
-
-
-<div class="payment_option">
-
-
-</div>
-
-
-
 
 </div>
 
