--- a/app/views/payment_options/dashboard.html.erb
+++ b/app/views/payment_options/dashboard.html.erb
@@ -55,7 +55,7 @@
   <% end %>
 
   <div class="confirm">
-    <h3>Did you pay this month??</h3>
+    <h3>Did you pay this month?</h3>
     <%= link_to "Done", payment_options_dashboard_path, class: "btn btn-primary mt-3"%>
   </div>
 
