--- a/app/views/payment_options/dashboard.html.erb
+++ b/app/views/payment_options/dashboard.html.erb
@@ -7,7 +7,7 @@
   <%# <% end %>
 <%# </div> %>
 
-<div class="ontainer">
+<div class="container">
 <div class="container breakdown shadow p-3 mb-5 bg-body rounded">
   <h2>Debt Information based on your plan</h2>
   <%# grafic here, depends on how granuality we show, we can get amount and date of payment from Payment data %>
