add chatgpt setup

--- a/app/views/debts/show.html.erb
+++ b/app/views/debts/show.html.erb
@@ -51,9 +51,10 @@
 </div>
 
 <div class="container mb-4">
-<h2>Graph area</h2>
-
+  <%# chat gpt thing here %>
+ <%= @response["choices"][0]["message"]["content"] %>
 </div>
+
 
 <div class="container plan shadow p-3 mb-5 bg-body rounded mb-4">
 <h2>Choose your plan!</h2>
