--- a/app/views/debts/_form.html.erb
+++ b/app/views/debts/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for [@debt] do |f| %>
-    <%= f.input :name %>
+    <%= f.input :name, input_html: { class:"text-success" } %>
     <%= f.input :interest_rate %>
     <%= f.input :monthly_principal_amount %>
     <%= f.input :remaining_principal %>
