--- a/app/assets/stylesheets/debts/show.scss
+++ b/app/assets/stylesheets/debts/show.scss
@@ -1,3 +1,10 @@
 .info {
   padding: 10;
 }
+
+.data_all {
+display: flex;
+justify-content: center;
+padding-bottom: 2.5%;
+margin-bottom: 2.5%;
+}
