--- a/app/views/debts/_form.html.erb
+++ b/app/views/debts/_form.html.erb
@@ -1,5 +1,6 @@
+
 <%= simple_form_for [@debt] do |f| %>
-    <%= f.input :name %>
+    <%= f.input :name, item_label_class: 'custom_name' %>
     <%= f.input :interest_rate %>
     <%= f.input :monthly_principal_amount %>
     <%= f.input :remaining_principal %>
@@ -7,5 +8,5 @@
     <%= f.input :income, label: "Monthly Income"%>
     <%= f.input :expense, label: "Monthly Expense" %>
     <%= f.input :debt_due_date, hint: "Add due date for next payment" %>
-    <%= f.submit class: 'btn btn-flat' %>
+    <%= f.submit class: 'btn btn-primary' %>
 <% end %>
