--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,6 @@
-<h2>Sign up</h2>
+<br>
+<br>
+<div class="container">
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: { turbo: :false }) do |f| %>
   <%= f.error_notification %>
@@ -18,8 +20,9 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, "Sign Up", class: 'btn btn-primary' %>
   </div>
 <% end %>
-
+<br>
 <%= render "devise/shared/links" %>
+</div>
