--- a/app/views/debts/show.html.erb
+++ b/app/views/debts/show.html.erb
@@ -57,7 +57,7 @@
 
 <div class="container mb-4">
   <%# chat gpt thing here %>
- <%= @response["choices"][0]["message"]["content"] %>
+ <%# <%= @response["choices"][0]["message"]["content"] %>
 </div>
 
 
