--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,24 @@
 <div class="container">
-
-<div id="main_logo">
-<%= image_tag 'endebt_logo.svg' %>
+  <div class="row justify-content-center">
+    <div class="col-12 col-sm-4">
+      <div class="main_logo">
+        <%= image_tag 'endebt_logo.svg'%>
+      </div>
+    </div>
+  </div>
 </div>
 
+<br>
 
+<div class="footer">
+  <div class="footer-links">
+    <a href="#"><i class="fab fa-github"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-linkedin"></i></a>
+  </div>
+  <div class="footer-copyright">
+    <i class="fa-regular fa-registered"></i> All Rights Reserved
+  </div>
 </div>
