--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,11 @@
 <html>
   <head>
     <title><%= meta_title %></title>
-    <meta name="description" content="<%= meta_description %>">
+    <meta name="description" content="<%= meta_description %>"/>
     <meta property="og:title" content="<%= meta_title %>" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="<%= request.original_url %>" />
-    <%# <meta property="og:image" content="<%= meta_image %>" /> %>
-    <meta property="og:image" content="app/assets/images/endebt_logo.svg" />
-
+    <meta property="og:image" content= <%= meta_image %> />
     <meta property="og:description" content="<%= meta_description %>" />
     <meta property="og:site_name" content="<%= meta_title %>" />
     <%= csrf_meta_tags %>
